[gd_scene load_steps=4 format=3 uid="uid://btkshog85osn2"]

[ext_resource type="Script" uid="uid://vnt6ti55womh" path="res://scripts/charecter.gd" id="1_8rlso"]
[ext_resource type="Texture2D" uid="uid://bklgdptn4w8n6" path="res://art/icon.svg" id="2_q3fmy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e262d"]
size = Vector2(32.8571, 34.2857)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_8rlso")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-0.400001, -0.0999985)
scale = Vector2(0.19375, 0.201563)
texture = ExtResource("2_q3fmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -7.15256e-07)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_e262d")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="mana_coldown" type="Timer" parent="."]
one_shot = true

[node name="fire_coldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="mana_coldown" to="." method="_on_mana_coldown_timeout"]
[connection signal="timeout" from="fire_coldown" to="." method="_on_fire_coldown_timeout"]
